cluster/apps/identity/authentik/smtp-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-mailgun-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
  egress:
    # Cilium must observe trusted CoreDNS replies to populate the FQDN policy.
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: smtp.mailgun.org
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
